--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -92,8 +92,8 @@
     margin-top: 0.4em;
     padding-top: 0.02em;
     height: 43px;
-    border-top: 0 0.1em 0  solid;
-    border-bottom: 0 0.1em 0  solid;
+    border-top: 0.1em  solid;
+    border-bottom: 0.1em  solid;
     border-color: white;
     margin-bottom: 1.3em;
  
@@ -423,7 +423,7 @@ display: inline-block;
 .post-card {
     border: 0.1em solid var(--color-postcard);
     border-radius: 0.3em;
-    margin-top: 1em;
+    margin-top: 4em;
     margin-bottom: 1.5em;
     padding: 2em 1.5em;
     cursor: default;
