--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -90,12 +90,14 @@
     background-color: transparent;
     color: white;
     margin-top: 0.4em;
-    padding-top: 0.02em;
-    height: 43px;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+    width: 100%;
+    height: 30px;
     border-top: 0.1em  solid;
     border-bottom: 0.1em  solid;
     border-color: white;
-    margin-bottom: 1.3em;
+    margin-bottom: 4em;
  
 }
 
@@ -423,7 +425,7 @@ display: inline-block;
 .post-card {
     border: 0.1em solid var(--color-postcard);
     border-radius: 0.3em;
-    margin-top: 4em;
+    margin-top: 0.5em;
     margin-bottom: 1.5em;
     padding: 2em 1.5em;
     cursor: default;
