--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -92,12 +92,11 @@
     margin-top: 0.4em;
     padding-top: 0.2em;
     padding-bottom: 0.2em;
-    width: 100%;
-    height: 30px;
+    height: 27px;
     border-top: 0.1em  solid;
     border-bottom: 0.1em  solid;
     border-color: white;
-    margin-bottom: 4em;
+    padding-bottom: 4em;
  
 }
 
