--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -100,9 +100,9 @@
     color: black;
     align-items: center;
     text-align: center;
-    margin-left: 0.2em;
+    margin-left: 0.16em;
     background-color: rgb(202, 255, 204);
-    margin-bottom: 3em;
+    padding-bottom: 3em;
 }
 
 .menu-category a:hover {
