--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -230,13 +230,10 @@
    }
 
 #top-btn {
-    background-color: rgb(202, 255, 204);
+    background-color: transparent;
     position: fixed;
-    width: 31px;
-    height: auto;
     display: block;
     writing-mode: vertical-rl;
-    color: rgb(25, 27, 127);
     right: 0;
     bottom: 0;
     padding: 1;
