--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -57,15 +57,15 @@
 
 .header-nav-cross img {
 
-padding-top: 0.05em;
-margin-right: 0.3em;
+padding-top: 0.025em;
 
 }
 
 .header-nav-femilog {
 
-    margin-left: -0.67em;
-    margin-right: 0.5em;
+    padding-left: -0.3em;
+    padding-right: 0.5em;
+    padding-top: 0.025em;
     color:rgb(25, 27, 127);
     
     }
