--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -57,7 +57,8 @@
 
 .header-nav-cross img {
 
-padding-top: 0.025em;
+padding-top: 0.011em;
+padding-right: 0.3em;
 
 }
 
@@ -65,7 +66,7 @@ padding-top: 0.025em;
 
     padding-left: -0.3em;
     padding-right: 0.5em;
-    padding-top: 0.025em;
+    margin-top: 0.011em;
     color:rgb(25, 27, 127);
     
     }
@@ -635,4 +636,3 @@ article .tag-container a {
     color: inherit;
     font-size: 0.875em;
 }
-
