--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -64,10 +64,11 @@ padding-right: -0.1em;
 
 .header-nav-femilog {
 
-    padding-left: -0.3em;
+    padding-left: -0.5em;
+    margin-left: -0.5em;
     padding-right: 0.5em;
-    margin-top: -0.1em;
-    padding-top: -0.1em;
+    margin-top: -0.2em;
+    padding-top: -0.2em;
     color:rgb(25, 27, 127);
     
     }
