--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -178,6 +178,9 @@ color:rgb(25, 27, 127);
     justify-content: flex-start;
     padding: 0em;
     margin-left: 0.8em;
+    margin-top: -0.2em;
+    padding-top: -0.2em;
+    color:rgb(25, 27, 127);
 }
 
 .header-link {
