--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -176,11 +176,10 @@ color:rgb(25, 27, 127);
     list-style: none;
     display: flex;
     justify-content: flex-start;
-    padding: 0em;
     margin-left: 0.8em;
-    margin-top: -0.2em;
-    padding-top: -0.2em;
-    color:rgb(25, 27, 127);
+    margin-top: 0em;
+    padding-top: 0.2em;
+    color:rgb(25, 27, 127) !important;
 }
 
 .header-link {
