--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -177,8 +177,9 @@ color:rgb(25, 27, 127);
     display: flex;
     justify-content: flex-start;
     margin-left: 0.8em;
+    padding-left:0em;
     margin-top: 0em;
-    padding-top: 0.2em;
+    padding-top: 1.6375em;
     color:rgb(25, 27, 127) !important;
 }
 
