--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -30,8 +30,8 @@
     display: flex;
     align-items: center;
     align-content: center;
-    padding-top: 22px;
-    left:0;
+    padding-top: 27px;
+    left:-3em;
     right:0;
     width: 100% ;
 }
@@ -256,7 +256,7 @@ color:rgb(25, 27, 127);
     position: fixed;
     display: block;
     writing-mode: vertical-rl;
-    right: 1.6em;
+    right: 0.725em;
     bottom: 2.2em;
     padding: 1;
     float:left;
