--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,7 +31,7 @@
     align-items: center;
     align-content: center;
     padding-top: 27px;
-    left:-3em;
+    margin-left: 1.8125em;
     right:0;
     width: 100% ;
 }
@@ -256,7 +256,7 @@ color:rgb(25, 27, 127);
     position: fixed;
     display: block;
     writing-mode: vertical-rl;
-    right: 0.725em;
+    right: 2.9125em;
     bottom: 2.2em;
     padding: 1;
     float:left;
