--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -176,7 +176,7 @@ color:rgb(25, 27, 127);
     list-style: none;
     display: flex;
     justify-content: flex-start;
-    margin-left: 0.8em;
+    margin-left: 0.4em;
     padding-left:0em;
     margin-top: 0em;
     padding-top: 1.15em;
@@ -216,7 +216,7 @@ color:rgb(25, 27, 127);
     color: white;
     top: 7%;
     bottom: 0;
-    right:0;
+    right:0.6em;
     padding-top: 40px;
     float:left;
     cursor: pointer;
@@ -257,7 +257,7 @@ color:rgb(25, 27, 127);
     display: block;
     writing-mode: vertical-rl;
     right: 1.93em;
-    bottom: 1.8em;
+    bottom: 3.6em;
     padding: 1;
     float:left;
     cursor: pointer;
