--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -178,6 +178,7 @@ color:rgb(25, 27, 127);
     justify-content: flex-start;
     margin-left: 0em;
     padding-left:-0.5em;
+    padding-right: -0.6em;
     margin-top: 0em;
     padding-top: 1.15em;
     color:rgb(25, 27, 127) !important;
