--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -191,7 +191,11 @@ color:rgb(25, 27, 127);
 }
 
 .header-nav li {
-    margin-left: 0.6em;
+    margin-left: 0.96em;
+    color:rgb(25, 27, 127) !important;
+}
+
+.header-nav li a {
     color:rgb(25, 27, 127) !important;
 }
 
