--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -181,7 +181,7 @@ color:rgb(25, 27, 127);
     padding-left: -0.13em;
     padding-top: 1em;
     color:rgb(25, 27, 127) !important;
-    font-family: var(--font-bold);
+    font-family: var(--font-bold) !important;
 }
 
 .header-link {
@@ -199,6 +199,7 @@ color:rgb(25, 27, 127);
 
 .header-nav li a {
     color:rgb(25, 27, 127) !important;
+    font-family: var(--font-bold) !important;
 }
 
 .header-link li {
