--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -259,6 +259,20 @@ color:rgb(25, 27, 127);
     color: rgb(202, 255, 204);
    }
 #aside-bar-hidden {
+    background-color: transparent;
+    z-index: -1;
+    position:absolute;
+    width: 31px;
+    height: auto;
+    display: block;
+    writing-mode: vertical-rl;
+    top: 7%;
+    bottom: 0;
+    right:0.56em;
+    padding-top: 40px;
+    float:left;
+    cursor: pointer;
+    font-size: 0.875em;
     color: rgb(202, 255, 204) !important;
 }
 
