--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -217,6 +217,7 @@ color:rgb(25, 27, 127);
     background-color: transparent;
     z-index: -1;
     position:absolute;
+    cursor: pointer;
     width: 31px;
     height: auto;
     display: block;
@@ -255,7 +256,7 @@ color:rgb(25, 27, 127);
 #aside-bar:hover li {
     list-style: none !important;
     text-decoration: none !important;
-    color: rgb(202, 255, 204);
+    color: rgb(255,48,0);
    }
 #aside-bar-hidden {
     background-color: transparent;
