--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -252,18 +252,12 @@ color:rgb(25, 27, 127);
     color: rgb(202, 255, 204);
 }
 
-
-#aside-bar:hover a {
+#aside-bar:hover li a {
     list-style: none !important;
     text-decoration: none !important;
     color: rgb(255,48,0);
    }
 
-#aside-bar-hidden:hover a {
-    list-style: none !important;
-    text-decoration: none !important;
-    color: rgb(255,48,0);
-   }
 #aside-bar-hidden {
     background-color: transparent;
     position:absolute;
