--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -253,7 +253,7 @@ color:rgb(25, 27, 127);
 }
 
 
-#aside-bar:hover li a {
+#aside-bar:hover li {
     list-style: none !important;
     text-decoration: line-through;
     color: rgb(202, 255, 204);
