--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -224,7 +224,7 @@ color:rgb(25, 27, 127);
     color: white;
     top: 4%;
     bottom: 0;
-    right:0.56em;
+    right:6em;
     padding-top: 20px;
     float:left;
     font-size: 0.875em;
@@ -254,6 +254,48 @@ color:rgb(25, 27, 127);
     text-decoration: line-through;
     color: rgb(202, 255, 204);
    }
+
+   #aside-bar-0 {
+    background-color: transparent;
+    position:absolute;
+    cursor: pointer;
+    width: 31px;
+    height: auto;
+    display: block;
+    writing-mode: vertical-rl;
+    color: white;
+    top: 4%;
+    bottom: 0;
+    right:0.56em;
+    padding-top: 20px;
+    float:left;
+    font-size: 0.875em;
+  }
+
+#aside-bar-0 a {
+    color: rgb(202, 255, 204);
+   }
+
+
+#aside-bar-0 li  {
+
+    list-style: none !important;
+    padding: 0;
+    margin-bottom: 20px;
+    color: rgb(202, 255, 204);
+
+}
+
+#aside-bar-0 li a {
+    list-style: none !important;
+    color: rgb(202, 255, 204);
+}
+
+#aside-bar-0:hover li {
+    list-style: none !important;
+    text-decoration: line-through;
+    color: rgb(202, 255, 204);
+   }
    
 #aside-bar-hidden {
     background-color: transparent;
@@ -263,7 +305,7 @@ color:rgb(25, 27, 127);
     writing-mode: vertical-rl;
     top: 4%;
     bottom: 0;
-    right: 8.6em;
+    right: 3em;
     padding-top: 20px;
     float:left;
     font-size: 0.875em;
