--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -266,7 +266,7 @@ color:rgb(25, 27, 127);
     color: white;
     top: 4%;
     bottom: 0;
-    right:0.3em;
+    right:0.45em;
     padding-top: 20px;
     float:left;
     font-size: 0.875em;
@@ -274,6 +274,7 @@ color:rgb(25, 27, 127);
 
 #aside-bar-0 a {
     color: rgb(202, 255, 204);
+    text-decoration: none;
    }
 
 
@@ -282,6 +283,7 @@ color:rgb(25, 27, 127);
     padding: 0;
     margin-bottom: 20px;
     color: rgb(202, 255, 204);
+    text-decoration: none;
 
 }
 
