--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -353,6 +353,7 @@ color:rgb(25, 27, 127);
     list-style: none !important;
     text-decoration: none !important;
     padding: 0;
+    margin-right: 0.02em;
     margin-bottom: 20px;
     color: rgb(25, 27, 127);
 
