--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -2,6 +2,13 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
+@font-face {
+  font-family: 'NEXON Lv1 Gothic OTF';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 :root{
   overflow-y: scroll;
 
