--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -572,7 +572,7 @@ display: inline-block;
 .post-card p {
     margin-bottom: 0em;
     margin-top: 0.75em;
-    font-family: 'IBMPlexSansKR-ExtraLight', 'sans-saerif';
+    font-family: 'IBMPlexSansKR-Regular', 'sans-saerif';
 
     
 }
