--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -130,6 +130,8 @@ color:rgb(25, 27, 127);
     margin-left: 0;
     height: 27px;
     margin-bottom: 2.8em;
+    letter-spacing: -0.027em;
+    font-family: 'IBMPlexSansKR-Regular', 'sans-saerif';
 
 }
 
