--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -248,7 +248,7 @@ color:rgb(25, 27, 127);
     position:absolute;
     cursor: pointer;
     width: 31px;
-    height: auto;
+    height: 24em;
     display: block;
     writing-mode: vertical-rl;
     color: white;
@@ -290,7 +290,7 @@ color:rgb(25, 27, 127);
     position:absolute;
     cursor: pointer;
     width: 31px;
-    height: auto;
+    height: 24em;
     display: block;
     writing-mode: vertical-rl;
     color: white;
@@ -329,7 +329,7 @@ color:rgb(25, 27, 127);
 #aside-bar-hidden {
     background-color: transparent;
     position:absolute;
-    height: auto;
+    height: 24em;
     display: block;
     writing-mode: vertical-rl;
     top: 4%;
@@ -616,7 +616,7 @@ display: inline-block;
     font-size: 2.1em;
     color:rgb(25, 27, 127);
     font-family: 'IBMPlexSansKR-Regular', 'sans-saerif';
-    letter-spacing: -0.025em;
+    letter-spacing: -0.12em;
     margin-top: 0em;
     margin-bottom: 0em;
     
