--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -670,6 +670,7 @@ display: inline-block;
 
 .page-head-title {
     color:rgb(202, 255, 204) !important;
+    font-size: 2.03em;
 }
 
 .page-head-title h1{
