--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -370,6 +370,7 @@ color:rgb(25, 27, 127);
     cursor: pointer;
     font-size: 0.875em;
     opacity: 0.5;
+    z-index: 1;
   }
 
 #aside-bar a {
